# ros2_snap7

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yaml
docs/: RFC_ROS_DISCOURSE.md  VALIDATION_REPORT.md
ros2_snap7/: package.xml  setup.cfg  setup.py
ros2_snap7/config/: plc_config.yaml  plc_config_demo.yaml
ros2_snap7/launch/: snap7_bridge.launch.py
ros2_snap7/ros2_snap7/: config_parser.py  s7_client.py  snap7_bridge_node.py
ros2_snap7/scripts/: plc_simulator.py
ros2_snap7/test/: test_config_parser.py  test_s7_client.py
ros2_snap7_interfaces/: CMakeLists.txt  package.xml
ros2_snap7_interfaces/msg/: PlcData.msg  PlcState.msg  PlcVariable.msg
ros2_snap7_interfaces/srv/: GetCpuInfo.srv  ReadVar.srv  WriteVar.srv
scripts/: generate_demo_screenshots.py
